--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <div class="column" id="left">
           <div id="side">
-            <p>We specialize in creative, clear, and cohesive communications solutions that build memorable experiences.</p>
+            <p>We specialize in sophisticated bespoke designs that transform your space.</p>
           </div>
           <form id="contact-form">
             <div class="form-group">
