--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <p>
                 <a href="mailto:beetjeblauwstudio@gmail.com">Contact</a><br>
                 <a href="https://instagram.com/artofelliot" target="_blank">Instagram</a><br>
+                <a href="designs.html">Designs</a><br>
             </p>
         </div>
     </header>
