--- a/designs.html
+++ b/designs.html
@@ -55,6 +55,46 @@
           <div class="square">
             <img src="design4.png" alt="Design 4">
           </div>
+            <!-- Square 5 -->
+          <div class="square">
+            <img src="FLORAL7.png" alt="Design 5">
+          </div>
+            <!-- Square 6 -->
+          <div class="square">
+            <img src="FLORAL8MU.png" alt="Design 6">
+          </div>
+            <!-- Square 7 -->
+          <div class="square">
+            <img src="FLORAL9MU.png" alt="Design 7">
+          </div>
+            <!-- Square 8 -->
+          <div class="square">
+            <img src="OCEAN11.png" alt="Design 8">
+          </div>
+            <!-- Square 9 -->
+          <div class="square">
+            <img src="OCEAN6MU.png" alt="Design 9">
+          </div>
+            <!-- Square 10 -->
+          <div class="square">
+            <img src="OCEAN9MU.png" alt="Design 10">
+          </div>
+            <!-- Square 11 -->
+          <div class="square">
+            <img src="ORGANIC3MU.png" alt="Design 11">
+          </div>
+            <!-- Square 12 -->
+          <div class="square">
+            <img src="ORGANIC4MU.png" alt="Design 12">
+          </div>
+            <!-- Square 13 -->
+          <div class="square">
+            <img src="PROTEA1MU.png" alt="Design 13">
+          </div>
+            <!-- Square 14 -->
+          <div class="square">
+            <img src="PROTEA6MU.png" alt="Design 14">
+          </div>
         </div>
     <footer class="footer">
         <div id="loghi">
